# tfbft

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ZZProtoBitReversal.py  ZZProtoFFTsProto.py  pyproject.toml  ta.md
csrc/include/: ButterFlyFFT.h  comm_index.h  gpu_ops.cuh
csrc/include/collectives/: mpi_ops.hpp  nccl_ops.hpp
csrc/include/common/: argparse.hpp  logger.hpp
csrc/include/xla/ffi/api/: ffi.h
csrc/src/: comm_index.cc  extensions.cc  gpu_ops.cu
examples/: butterfly.py  test.py
prototypes/: 02_ProtoDIF.py  03_ProtoFFTsProto.py  04_Protocolors.py
src/butterfly_fft/: __init__.py  ops.py
src/butterfly_fft/_src/: registerations.py
src/csrc/: bit_reverse.cu  butterfly_fft.cu  collectives.cc  extensions.cc  gpu_ops.cu
src/csrc/include/: arithmetics.cuh  bit_reverse.h  cudastreamhandler.hpp  extensions.h  gpu_ops.h
src/csrc/include/collectives/: arithmetics.cuh  butterfly_comm_index.hpp  collective_ops.hpp  comm_index.hpp  mpi_ops.hpp  nccl_ops.hpp
src/csrc/include/common/: checks.h  cudastreamhandler.hpp  ffi_helper.hpp  perfostep.hpp
src/tfbft/: __init__.py  ops.py
src/tfbft/_src/: __init__.py  registerations.py
tests/: conftest.py  test_axpy.py  test_collective_calls.py
